# api/router/router.go
@@ -157,6 +157,7 @@ func (r router) ProvideRouter(e *echo.Echo) {
 	e.PUT("/buy_reports/:id", r.buyReportController.UpdateBuyReport)
 	e.DELETE("/buy_reports/:id", r.buyReportController.DeleteBuyReport)
 	e.GET("/buy_reports/details", r.buyReportController.IndexBuyReport)
+	e.GET("/buy_reports/summary", r.buyReportController.GetBuyReportSummary)
 	e.GET("/buy_reports/csv/download", r.buyReportController.GetBuyReportsCsvDownload)
 	e.PUT("/buy_report/status/:buy_report_id", r.buyReportController.UpdateBuyReportStatus)
 
